# five-bullet-friday

./: .flake8  LICENSE.md  README.md  pyproject.toml  whisper-vs-whisper-cpp.md
src/fbf/: main.py  summarize.py  transcribe.py
